# compile-time-containers

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  ctc.cppm
examples/: CMakeLists.txt  Makefile  config.cpp
include/: ctc.hpp
include/ctc/: cfunction.hpp  map.hpp  utility.hpp
single-header/: ctc.hpp
tests/: CMakeLists.txt  adaptors.cpp  cfunction.cpp  map.cpp  sequences.cpp  set.cpp  string.cpp  unordered.cpp  vector.cpp
